# grain-web

./: .dockerignore  .env  .env.example  Dockerfile  docker-compose.yaml  pyproject.toml  run
config/: gunicorn.py  settings.py
grain/: app.py  extensions.py  medical.py
grain/page/: views.py
grain/page/templates/layouts/: index.html
grain/page/templates/page/: home.html  predict.html  upload.html
grain/up/: views.py
public/css/: app.css
